fixed images on about page to always show above text on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,10 +338,15 @@ footer a:hover {
   flex: 50%;
 }
 
+
+
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
 @media (max-width: 760px) {
   .flex-item-image, .flex-item-text {
     flex: 100%;
+  }
+  .flex-right {
+    flex-direction: column-reverse;
   }
 }
 
